crates/string_wizard/tests/snapshots/magic_string_source_map__basic3.snap
---
source: crates/string_wizard/tests/magic_string_source_map.rs
expression: sm.to_json_string()
---
{"version":3,"names":["d","v","div"],"sources":[""],"sourcesContent":["<div>\n  hello, world\n</div>"],"mappings":";AAAA,CAACA,CAAC,CAACC,CAAC;AACJ,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC,CAAC;AACb,CAAC,CAACC,EAAG"}
