crates/string_wizard/tests/snapshots/magic_string_source_map__hires_boundary.snap
---
source: crates/string_wizard/tests/magic_string_source_map.rs
expression: "visualize(&s, Hires::Boundary, &output)"
---
- 
(1:0) "function" --> (1:0) "function"
(1:8) " " --> (1:8) " "
(1:9) "test" --> (1:9) "test"
(1:13) "(" --> (1:13) "("
(1:14) ")" --> (1:14) ")"
(1:15) " " --> (1:15) " "
(1:16) "{\n" --> (1:16) "{\n"
(2:0) " " --> (2:0) " "
(2:1) " " --> (2:1) " "
(2:2) "console" --> (2:2) "console"
(2:9) "." --> (2:9) "."
(2:10) "log" --> (2:10) "log"
(2:13) "(" --> (2:13) "("
(2:14) "\"" --> (2:14) "\""
(2:15) "foo" --> (2:15) "hello"
(2:18) "\"" --> (2:20) "\""
(2:19) ")\n" --> (2:21) ")\n"
(3:0) " " --> (3:0) " "
(3:1) " " --> (3:1) " "
(3:2) "console" --> (3:2) "console"
(3:9) "." --> (3:9) "."
(3:10) "error" --> (3:10) "error"
(3:15) "(" --> (3:15) "("
(3:16) "\"" --> (3:16) "\""
(3:17) "bar" --> (3:17) "world"
(3:20) "\"" --> (3:22) "\""
(3:21) ")\n" --> (3:23) ")\n"
(4:0) "}\n" --> (4:0) "}\n"
