crates/string_wizard/tests/snapshots/magic_string_source_map__hires_true.snap
---
source: crates/string_wizard/tests/magic_string_source_map.rs
expression: "visualize(&s, Hires::True, &output)"
---
- 
(1:0) "f" --> (1:0) "f"
(1:1) "u" --> (1:1) "u"
(1:2) "n" --> (1:2) "n"
(1:3) "c" --> (1:3) "c"
(1:4) "t" --> (1:4) "t"
(1:5) "i" --> (1:5) "i"
(1:6) "o" --> (1:6) "o"
(1:7) "n" --> (1:7) "n"
(1:8) " " --> (1:8) " "
(1:9) "t" --> (1:9) "t"
(1:10) "e" --> (1:10) "e"
(1:11) "s" --> (1:11) "s"
(1:12) "t" --> (1:12) "t"
(1:13) "(" --> (1:13) "("
(1:14) ")" --> (1:14) ")"
(1:15) " " --> (1:15) " "
(1:16) "{\n" --> (1:16) "{\n"
(2:0) " " --> (2:0) " "
(2:1) " " --> (2:1) " "
(2:2) "c" --> (2:2) "c"
(2:3) "o" --> (2:3) "o"
(2:4) "n" --> (2:4) "n"
(2:5) "s" --> (2:5) "s"
(2:6) "o" --> (2:6) "o"
(2:7) "l" --> (2:7) "l"
(2:8) "e" --> (2:8) "e"
(2:9) "." --> (2:9) "."
(2:10) "l" --> (2:10) "l"
(2:11) "o" --> (2:11) "o"
(2:12) "g" --> (2:12) "g"
(2:13) "(" --> (2:13) "("
(2:14) "\"" --> (2:14) "\""
(2:15) "foo" --> (2:15) "hello"
(2:18) "\"" --> (2:20) "\""
(2:19) ")\n" --> (2:21) ")\n"
(3:0) " " --> (3:0) " "
(3:1) " " --> (3:1) " "
(3:2) "c" --> (3:2) "c"
(3:3) "o" --> (3:3) "o"
(3:4) "n" --> (3:4) "n"
(3:5) "s" --> (3:5) "s"
(3:6) "o" --> (3:6) "o"
(3:7) "l" --> (3:7) "l"
(3:8) "e" --> (3:8) "e"
(3:9) "." --> (3:9) "."
(3:10) "e" --> (3:10) "e"
(3:11) "r" --> (3:11) "r"
(3:12) "r" --> (3:12) "r"
(3:13) "o" --> (3:13) "o"
(3:14) "r" --> (3:14) "r"
(3:15) "(" --> (3:15) "("
(3:16) "\"" --> (3:16) "\""
(3:17) "bar" --> (3:17) "world"
(3:20) "\"" --> (3:22) "\""
(3:21) ")\n" --> (3:23) ")\n"
(4:0) "}\n" --> (4:0) "}\n"
